# stdin.py

./: README.md  setup.cfg  setup.py
tests/stdin/examples/: read.sh  size.sh
