# https://pypi.org/project/setupcfg-generator/
[metadata]
name = stdin
version = 2018.11.20
url = https://github.com/looking-for-a-job/stdin.py
classifiers = file: classifiers.txt
description = file: description.txt
long_description = file: README.md
long_description_content_type = text/markdown
keywords = stdin

[options]
install_requires = 
	public
	setuptools
packages = 
	stdin
